# cargo-semantic-release

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  spellcheck.dic
.github/ISSUE_TEMPLATE/: config.yaml  issue_template.yaml
.github/workflows/: pre_commit_checks.yml  publish_pages.yml  release.yaml  tests.yml
docs/: go.mod  hugo.yaml
docs/content/: _index.md
docs/content/development/: _index.md  change_log.md  how_to_contribute.md
docs/i18n/: en.yaml
src/: changes.rs  commit_fetcher.rs  commits.rs  conventional_commit.rs  lib.rs  main.rs  test_util.rs  version_tag.rs
src/repo/: commit_fetcher.rs  conventional_commit.rs  mod.rs  version_tag.rs
src/repo/commit/: gitmoji.rs  mod.rs
tests/: integration.rs
