[package]
name = "cargo-semantic-release"
version = "0.2.0"
description = "Plugin for Cargo to create semantic release"
edition = "2021"
authors = ["Kristof Kovacs <kristof.kovacs1996@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/crate/cargo-semantic-release/"
homepage = "https://8-bit-hunters.github.io/cargo-semantic-release/"

[dependencies]
git2 = "0.20.0"
semver = "1.0.25"
tempfile = "3.16.0"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"
