[package]
name = "cargo-semantic-release"
version = "0.2.0"
description = "Plugin for Cargo to create semantic release"
edition = "2021"
authors = ["Kristof Kovacs <kristof.kovacs1996@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/crate/cargo-semantic-release/"
homepage = "https://8-bit-hunters.github.io/cargo-semantic-release/"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap-cargo = "0.15.2"
git2 = "0.20.0"
semver = "1.0.25"
tempfile = "3.16.0"
regex = "1.11.1"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[features]
test_util = []

[dev-dependencies]
cargo-semantic-release = { path = ".", features = ["test_util"] }
